# battleship

./: AIController.cpp  AIController.h  AIState.h  Board.cpp  Board.h  CMakeLists.txt  CellState.h  Game.cpp  Game.h  GameConfig.h  ProbabilityMap.cpp  ProbabilityMap.h  README.md  Renderer.cpp  Renderer.h  ShotResult.h  ShotsGrid.h  StyleConfig.h  battleship.cpp  battleship.sln  battleship.vcxproj  battleship.vcxproj.filters
.github/workflows/: cmake-single-platform.yml  windows-build.yml
